# Cadote

./: .gitignore  LICENSE.txt  README.md
examples/: performance_macro.ipynb  performance_micro.ipynb
examples/EnclavizationPass/: Cargo.bin.toml  Cargo.lib.toml  Cargo.toml  Makefile
examples/EnclavizationPass/src/: main.rs
examples/IndirectionPass/: Makefile
examples/IndirectionPass/cargocult/: Makefile
examples/factorial/: Cargo.bin.toml  Cargo.lib.toml  Cargo.unenclaved.toml  Makefile  measure.py  measurement_factorial.tsv
examples/factorial/src/: main.rs
examples/gcd/: Cargo.bin.toml  Cargo.lib.toml  Cargo.unenclaved.toml  Makefile  measure.py  measurement_gcd.tsv
examples/gcd/src/: main.rs
examples/maxisign/: Cargo.bin.toml  Cargo.lib.toml  Cargo.toml  Cargo.unenclaved.toml  Makefile  measure.py  measurement_maxisign.tsv
examples/maxisign/src/: main.rs
examples/minimal_ecall/: Cargo.bin.toml  Cargo.lib.toml  Cargo.unenclaved.toml  Makefile  measure.py  measurement_minimal_ecall.tsv
examples/minimal_ecall/src/: main.rs
examples/minimal_startup/: Cargo.bin.toml  Cargo.lib.toml  Cargo.unenclaved.toml  Makefile  measure.py  measurement_minimal_startup.tsv
examples/minimal_startup/src/: main.rs
examples/password_check/: Cargo.bin.toml  Cargo.lib.toml  Cargo.toml  Cargo.unenclaved.toml  Makefile  measure.py  measurement_password_check.tsv
examples/password_check/src/: main.rs
llvm/: CMakeLists.txt
llvm-pass/: CMakeLists.txt
llvm-pass/include/: IndirectionPass.h
llvm-patches/: 0001-Add-Enclavization-Pass.patch  0002-Enclavization-Pass-Fix-typo.patch  0003-Enclavization-Pass-Set-DEBUG_TYPE-in-shared-header.patch  0004-Enclavization-Pass-Split-into-two-passes-for-binary-.patch  0005-Enclavization-Passes-Use-exception-for-error-handlin.patch  0006-Enclavization-Pass-Generate-valid-EDL-files.patch  0007-Enclavization-Pass-Adjust-name-of-generated-EDL-file.patch  0008-Enclavization-Pass-Make-first-version-of-automatic-e.patch  0009-Enclavization-Pass-Add-support-for-structs-to-EDL-ex.patch  0010-Enclavization-Pass-Declare-all-pointers-as-user_chec.patch  0011-Enclavization-Pass-Insert-runtime-checks-for-args-an.patch  0012-Enclavization-Pass-Add-support-for-LLVM-integers-wid.patch  0013-Enclavization-Pass-Add-support-for-LLVM-type-i1-bool.patch  0014-Enclavization-Pass-Add-support-to-convert-filesystem.patch  0015-Enclavization-Pass-Add-calls-for-automatic-IO-Result.patch  0016-Enclavization-Pass-Update-mangled-names.patch  0017-Enclavization-Pass-Refactor-main-pass-files.patch  0018-Enclavization-Pass-Redesign-output-and-error-handlin.patch  0019-Fix-copy-paste-oversights.patch  0020-Enclavization-Pass-Fix-critical-typo-preventing-encl.patch  0021-Enclavization-Pass-Insert-SGX-usage-for-OpenOptions-.patch  0022-Enclavization-Pass-Remove-obsolete-hack-for-EDL-file.patch  0023-Enclavization-Pass-Fix-casing-for-helper-function-na.patch  0024-Update-mangled-names.patch  0025-Enclavization-Pass-Add-support-for-untrusted-functio.patch  0026-Enclavization-Pass-Add-support-for-reverse-gates.patch  0027-Enclavization-Pass-Fix-EDL-file-export-for-reverse-g.patch  0028-Enclavization-Pass-Insert-pointer-checks-in-reverse-.patch  0029-Enclavization-Pass-Do-not-adopt-dereferencable-attri.patch  0030-Enclavization-Pass-Implement-memory-copies-in-postca.patch  0031-Enclavization-Pass-Do-not-copy-sret-style-pointers-r.patch  0032-Enclavization-Pass-Make-enclave-modifications-work-w.patch  0033-Enclavization-Pass-Use-wrappers-instead-of-mangled-n.patch  0034-Enclavization-Pass-Implement-memory-copies-in-revers.patch  0035-Enclavization-Pass-Add-missing-debug-output.patch  0036-Add-commented-out-debug-output-for-IR-code.patch  0037-Enclavization-Pass-Allow-nested-ECALLs-from-OCALLs-i.patch
llvm/examples/EnclavizationPass/: Makefile
llvm/examples/EnclavizationPass/src/: main.rs
llvm/examples/IndirectionPass/: Makefile  wraps.c  wrapsteel.rs
llvm/examples/IndirectionPass/cargocult/: Cargo.toml  Makefile
llvm/examples/IndirectionPass/cargocult/src/: main.rs
llvm/include/: EnclavizationPass.h  IndirectionPass.h
llvm/include/EnclavizationPass/: Constants.h  Export.h  Names.h  Wrappers.h
llvm/lib/: EnclavizationPass.cc  IndirectionPass.cc  IndirectionPass.cpp
llvm/lib/EnclavizationPass/: Export.cc  Wrappers.cc
rust-enclave/: Makefile
rust-enclave/app/: Cargo.toml  build.rs
rust-enclave/app/src/: main.rs
rust-enclave/enclave/: Cargo.toml  enclave.edl  enclave.lds
rust-enclave/enclave/src/: lib.rs
rust-patches/: 0001-Avoid-installing-external-LLVM-dylibs.patch  0002-Remove-duplicate-checks-for-lang-items.patch  0003-Add-build-config-for-Cadote.patch  0004-Use-separate-PassManager-for-extra-LLVM-passes.patch
support/: build.rs  enclave-config.xml
support/cadote_runtime/: Cargo.toml
support/cadote_runtime/src/: lib.rs
support/cadote_trusted_runtime/: Cargo.toml
support/cadote_trusted_runtime/src/: io_error.rs  lib.rs
support/cadote_untrusted_runtime/: Cargo.toml
tools/: get-bc.sh
