[package]
name = "enclave_app"
version = "0.0.1"
authors = ["Felix Dreissig <felix.dreissig@fau.de>"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
