[package]
name = "simpleenclave"
version = "0.0.1"
authors = ["Felix Dreissig <felix.dreissig@fau.de>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3", features = ["backtrace"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
