[package]
name = "cadote_trusted_runtime"
version = "0.0.1"
authors = ["Felix Dreissig <felix.dreissig@fau.de>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[profile.release]
overflow-checks = true

[dependencies]
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
# We need to use `rev` instead of `tag` here because of the "maxisign" example, its dependency on "ring-sgx"
# and Cargo bugs; see "examples/maxisign/Cargo.lib.toml" for details
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev="v1.1.3", features = ["backtrace"] }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
