[package]
name = "cadote_untrusted_runtime"
version = "0.0.1"
authors = ["Felix Dreissig <felix.dreissig@fau.de>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.3" }
